--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+<% if signed_in? %>
+  <p>Hello, <%= current_user.name %>! You are signed in.
+<% end %>
+
+<% flash.each do |key, message| %>
+  <p class=<%= key %> ><%= message %>
+<% end %>
+
 <%= yield %>
 
 <%= debug(params) if Rails.env.development? %>
