--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,1 +1,6 @@
 %h1= "Profile of #{@user.name}"
+
+%h3= "Topics of #{@user.name}:"
+%ul
+  - @user.topics.each do |topic|
+    %li= link_to topic.title, topic
